cmake_minimum_required(VERSION 3.31)
project(ss11 C)

set(CMAKE_C_STANDARD 23)

add_executable(ss11 main.c
        CNTT_PTIT_IT104_ss11_B1.c
        CNTT_PTIT_IT104_ss11_B2.c
        CNTT_PTIT_IT104_ss11_B3.c
        CNTT_PTIT_IT104_ss11_B4.c
        CNTT_PTIT_IT104_ss11_B5.c
        CNTT_PTIT_IT104_ss11_B6.c
        CNTT_PTIT_IT104_ss11_B7.c
        CNTT_PTIT_IT104_ss11_B8.c)
